# humanoid

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  ARM_BRINGUP.md  README.md  REPOSITORY_INFRASTRUCTURE_GUIDE.md  TELEOP_PINK_IK_HANDOFF.md  VR_VIEW_SETUP.md  mjlabs_setup.md  robot_links.json  setup.cfg  task.md  watch_video.html  watod  watod-config.sh
autonomy/behaviour/joint_command/: CMakeLists.txt  JointCommand.md  MOVE_ARM_RUNBOOK.md  package.xml  recorded_poses.yaml
autonomy/behaviour/joint_command/config/: hardware_mapping.yaml  joint_command.yaml  safety_limits.yaml
autonomy/behaviour/joint_command/include/: joint_command_core.hpp  joint_command_node.hpp
autonomy/behaviour/joint_command/launch/: joint_command.launch.py
autonomy/behaviour/joint_command/scripts/: monitor_motor_feedback.py  motor_mapping_test.py  ros_bridge.py  set_motor_origin.py  udp_to_ros_bridge.py  wave_demo.py
autonomy/behaviour/joint_command/src/: joint_command_core.cpp  joint_command_node.cpp
autonomy/controller/: README.md  controller.launch.py  package.xml  setup.cfg  setup.py
autonomy/controller/rosbridge_listener/launch/: rosbridge_listener.launch.py
autonomy/controller/rosbridge_publisher/launch/: rosbridge_publisher.launch.py
autonomy/controller/rosbridge_publisher/src/: rosbridge_publisher_core.cpp
autonomy/il/: README.md  pyproject.toml
autonomy/il/config/: dataset_schema.yaml  dataset_schema_pick_place_bimanual.yaml  dataset_schema_sim.yaml  dataset_schema_so101_sim.yaml  dataset_schema_so101_sim_vision.yaml  record_defaults.yaml
autonomy/il/humanoid_act/: __init__.py  checkpoint.py  config.py  dataset.py  eval.py  normalize.py  policy.py  smoke.py  train.py
autonomy/il/humanoid_act/detr/: __init__.py  build.py
autonomy/il/humanoid_il/: __init__.py  arm_pose_io.py  episode_keys.py  frame.py  observation.py  record.py  record_loop.py  record_utils.py  recorder.py  ros_buffer.py  schema.py  sim_recorder.py  sim_session.py  snapshot.py  so101_cameras.py  so101_domain_rand.py  so101_sim.py
autonomy/il/humanoid_il.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autonomy/il/humanoid_il/sinks/: __init__.py  hdf5.py  lerobot.py
autonomy/interfacing/can/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
autonomy/interfacing/can/can/: can_core.py  can_node.py
autonomy/interfacing/can/config/: hardware_mapping.yaml  mit_profiles.yaml  params.yaml
autonomy/interfacing/can/include/: can_core.hpp  can_node.hpp  mit_motor_control.hpp
autonomy/interfacing/can/launch/: can.launch.py  can_test.launch.py
autonomy/interfacing/can/scripts/: calibrate_arm.py  can_udev.sh  setup_can.sh
autonomy/interfacing/can/src/: can_core.cpp  can_node.cpp  mit_motor_control.cpp
autonomy/interfacing/can/test/: test_can.py  test_controller.cpp
autonomy/simulation/: CMakeLists.txt  MUJOCO_LOG.TXT  package.xml  scratch_finger_test.py
autonomy/simulation/Humanoid_RL/: arm_test.py  hand_test.py
autonomy/simulation/Humanoid_Wato/: arm_hand_test.py  axes_out.txt  both_arms.py  debug_dex.py  dump_axes.py  dump_kwargs.py  dump_source.py  fingertip_ik_isaac_sim.py  hand_test.py  wato_hand_isaaclab_teleop.py
autonomy/simulation/Humanoid_Wato/ModelAssets/: arm.usd
autonomy/simulation/Humanoid_Wato/UsdModelAssets/: block.usd  box.usd
autonomy/simulation/Humanoid_Wato/Wato Humanoid Simultion Model V1/: CMakeLists.txt  package.xml
autonomy/simulation/Humanoid_Wato/arm_assembly/: IK.md  arm_assembly.urdf  arm_assembly_fixed.urdf  fingertip_ik.py  fingertip_ik2.py  fix_urdf.py  left_arm_assembly.urdf  restore_urdf.py  right_arm_assembly.urdf  simple_door.urdf  test_dex.py
autonomy/simulation/Humanoid_Wato/wato_bimanual_arm/: CMakeLists.txt  live_arm_mjviser.py  package.xml  static_pose_mjviser.py
autonomy/simulation/Humanoid_Wato/wato_hand/: CMakeLists.txt  package.xml  splay_demo.py  wato_hand_cfg.py
autonomy/simulation/Task_space_controller/robot_arm_controllers/: README.md  task_space_real.py  task_space_test.py  zero_pose.py  zeroing.py
autonomy/simulation/Teleop/: Teleop.md  camera_messages.py  newton_keyboard_teleop.py  quest_live_arm_teleop_implementation.md  test_camera.py  wato_lower_body_standing.py  websocket_test.py
autonomy/simulation/Teleop/camera-based teleoperation/: README.md  arm_cfg.py  fingertip_ik2.py  hand_recorder.py  teleop_tuned_arm_cfg.py  wato_hand_isaaclab_teleop.py  wato_hand_ros2_node.py
autonomy/simulation/Teleop/camera_based_teleoperation/: README.md  hand_landmark_publisher.py  wato_hand_isaaclab_teleop.py  wato_hand_ros2_node.py
autonomy/simulation/Teleop/external_script/: run_dex_retargeting_test.py  single_hand_detector.py  wato_dex_retargeting_utils.py  wato_hand_ros2_node.py  wato_lower_body_standing.py  wato_upper_body_retargeter.py  (+2 more)
autonomy/simulation/Wato_additional_scripts/: IL_test.py  lightbox_spinup.py  monitor_motor_feedback.py  send_motor_command.py  zeroing.py
autonomy/simulation/fabrics_controller/: README.md  compute_pca.py  humanoid_hand_params.yaml  humanoid_hand_pose_fabric.py  pca_matrix.npy  pca_mean.npy  pca_score_maxs.npy  pca_score_mins.npy  run_example.py
autonomy/simulation/pick_place_gen/: MIMIC_DATASET.md  README.md  build_wato_robot_cfg.py  curobo_expert.py  generate_demos.py  orchestrator.py  record_mimic_source_demos.py  run_isaaclab_mimic_script.py  task_params.py  validate_curobo_plan.py  wato_constants.py
autonomy/simulation/quest_isaac_teleop/: README.md  SETUP.md  ik.md  package.xml  run_bimanual_teleop.sh  run_quest_bimanual_teleop.py  run_quest_bimanual_teleop.sh  run_quest_openxr_bimanual_teleop.py  run_relay.sh  setup.cfg  setup.py
autonomy/simulation/robots/: lerobot.py
autonomy/simulation/so101_vial_task/: README.md  pyproject.toml
autonomy/teleop/quest_teleop/: CMakeLists.txt  README.md  package.xml  readme.md
autonomy/teleop/rosbridge_example/: CMakeLists.txt  package.xml
autonomy/teleop/rosbridge_listener/: CMakeLists.txt  package.xml
src/perception/perception_launch/: package.xml  setup.cfg  setup.py
(+947 files in other folders)
