<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller</name>
  <version>0.0.0</version>
  <description>Controller launch package</description>
  <maintainer email="hello@watonomous.ca">WATonomous</maintainer>
  <license>MIT</license>

  <exec_depend>rosbridge_listener</exec_depend>
  <exec_depend>rosbridge_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 