[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid-il"
version = "0.1.0"
description = "Dataset recording for the WATO humanoid arm (ROS 2 + Isaac Sim)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
lerobot = ["lerobot>=0.3.0"]
keyboard = ["pynput>=1.7"]
ros = ["opencv-python-headless>=4.8"]
hdf5 = ["h5py>=3.8"]
record = ["lerobot>=0.3.0", "pynput>=1.7", "h5py>=3.8"]
sim = ["torch>=2.0", "tqdm>=4.0", "lerobot>=0.3.0"]

[project.scripts]
humanoid-record = "humanoid_il.record:main"
humanoid-act-smoke = "humanoid_act.smoke:main"
humanoid-act-train = "humanoid_act.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["humanoid_il*", "humanoid_act*"]
