<?xml version="1.0"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>Simulation folder for the WATO Humanoid project.</description>

  <maintainer email="wilsonchenghy@gmail.com">Wilson Cheng</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
