<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>quest_teleop</name>
  <version>0.0.0</version>
  <description>Quest 2 to ROS 2 teleoperation bridge</description>

  <maintainer email="hassaanfarooqi2000@gmail.com">hassaan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>boost</depend>
  <depend>openssl</depend>
  <depend>nlohmann-json3-dev</depend>
  <depend>common_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>