<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_launch</name>
  <version>0.0.0</version>
  <description>Launch files for the perception module</description>
  <maintainer email="pconjeevaram@watonomous.ca">conjeevaram</maintainer>
  <license>Apache2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>depth_estimation</exec_depend>
  <exec_depend>pose_estimation</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
